hphp/test/zend/good/Zend/tests/bug39304_2_4.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (version_compare(zend_version(), '2.4.0', '<')) die('skip ZendEngine 2.4 needed');
}
