hphp/test/zend/bad/ext/pdo_mysql/tests/pdo_mysql_subclass.php.skipif
<?php
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'skipif.inc');
require_once(dirname(__FILE__) . DIRECTORY_SEPARATOR . 'mysql_pdo_test.inc');
MySQLPDOTest::skip();
if (version_compare(PHP_VERSION, '5.0.0', '<'))
	die("skip Requires PHP 5.0+");
?>